Adjust the existing unit test and put the filter based on the path before the iteration